
Implement next:

    * MAXIMUM, MINIMUM operations to finish off minterm builds :)
        + and test cases (add to chk_minterm?)

    * Comparisons for EV+, EV*
        + add test cases to ops_comp

    * forest::createEdge() for constants
        replace with    dd_edge::setToConstant(...)   ?
        and for internal use, add to EdgeOp_none, EdgeOp_Plus, EdgeOp_Times
            void buildConstant(val, edge_value &ev, node_handle &p)
        or something similar

    RELEASE HERE


    * super combined element-wise arithmetic into 1-3 mega operations
        like we did for comparisons. Templatized using class with
        inlined static methods.

        For multi-terminal:

            // name for display purposes
            const char* name();

            // does the operation commute, a OP b always equals b OP a
            bool commutes();

            // does the given value act as an identity
            // as the first operand: does x OP ? = ?
            bool isLeftIdentity(node_handle x);

            // does the given value act as an identity
            // as the second operand: does ? OP x = ?
            bool isRightIdentity(node_handle x);

            // Apply on terminals
            node_handle applyTerminals(const forest* fa, node_handle a,
                            const forest* fb, node_handle b);



        For "compatible" operators with the EV operator
            (e.g., + or - on EV+; * or / on EV* )

            // name for display purposes
            const char* name();

            // does the operation commute?
            // this means its the same operation.
            bool commutes();

            // does the given edge value act as an identity
            // as the second operand (also first, if we commute)
            bool isIdentity(const edge_value& ev);

            // Apply on two edge values
            // c = a op b
            applyEV(const edge_value &a, const edge_value &b, edge_value &c);

