@@ -8,7 +8,8 @@ Implement next:
         + add test cases to ops_comp
 
     * forest::createEdge() for constants
-        replace with    dd_edge::setToConstant(...)   ?
+        make a non-virtual version in forest.cc
+
         and for internal use, add to EdgeOp_none, EdgeOp_Plus, EdgeOp_Times
             void buildConstant(val, edge_value &ev, node_handle &p)
         or something similar
